--- a/src/CommonComponents/Navbar/Navbar.css
+++ b/src/CommonComponents/Navbar/Navbar.css
@@ -45,3 +45,12 @@ a.active {
     background-color: #8860D0;
     border: 2px solid #84CEEB;
 }
+
+@media(max-width:840px) {
+    nav ul li a {
+        font-size: 15px;
+    }
+    nav ul li{
+        margin: 0 0.5rem;
+    }
+}
