--- a/src/CommonComponents/Navbar/Navbar.css
+++ b/src/CommonComponents/Navbar/Navbar.css
@@ -23,21 +23,18 @@ nav {
 }
 
 .nav-links li a {
-    text-decoration: none;
-    color: #ffffff;
     font-weight: bold;
-    transition: color 0.3s, background-color 0.3s, transform 0.3s;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    display: block;
-    text-align: center;
+    color: #ffffff !important;
+    font-size: 18px;
+    color: #262626;
+    text-decoration: none;
+    transition: 0.3s ease;
 }
 
-.nav-links li a:hover,
-.nav-links li a:focus {
-    color: #C1C8E4;
-    background-color: #5AB9EA;
-    transform: scale(1.05);
+.nav-links li a:hover {
+    border-top: 4px solid #FF9500;
+    border-bottom: 4px solid #FF9500;
+    padding: 6px 0;
 }
 
 @media(max-width:840px) {
@@ -57,6 +54,11 @@ nav {
 @media (max-width:700px) {
     .hamburger-container {
         display: block;
+        background-color: #FF9500;
+        border-radius: 20%;
+        padding: 2px;
+        color: white;
+        font-weight: bold;
     }
 
     .nav-links {
@@ -68,18 +70,33 @@ nav {
         justify-content: flex-start;
         width: 100%;
         height: 100vh;
-        background-color: burlywood;
+        background-color: #5680E9;
         right: 0;
         border-radius: 100% 0% 0% 100% / 0% 100% 0% 100%;
-        transition: all 0.5s ease;
+        transition: all 0.5s;
+        z-index: 9999999;
     }
 
     .nav-links.open {
         display: flex;
-        transition: all 0.5s ease;
+        animation: slideInFromRight 0.3s forwards;
+        gap: 15px;
     }
 
     .nav-links li a {
-        color: black;
+        color: white !important;
+
+    }
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
     }
 }
